优化结构，移除google依赖